<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ai.ai_disc.Farmer.Farmer_LoginActivity"
    tools:showIn="@layout/activity_farmer_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<!--
        <ImageView
            android:id="@+id/image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/icon" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textSize="30dp"
            android:text="Farmer Login"
            android:textColor="@color/black" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/user" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="10dp"
                        android:text="Username "
                        android:textColor="@color/black"
                        android:textSize="15dp"

                        />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">


                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/edittext_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:longClickable="false"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/lock" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="10dp"
                        android:text="Password "
                        android:textColor="@color/black"
                        android:textSize="15dp"


                        />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edittext_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="textPassword"
                        android:longClickable="false"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#9CD886"
            app:cornerRadius="20sp"
            android:text="sign in"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/registerHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:layout_marginBottom="40dp"
            android:text="Register here"
            android:textColorHighlight="@color/green"
            android:textColor="@color/blue"
            android:textSize="19sp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>
